# chareth

./: Cargo.toml  LICENSE.txt  README.md
benches/: my_benchmark.rs
src/: benchmarks.rs  bitboard.rs  board.rs  lib.rs  main.rs  movegen.rs  moves.rs  pieces.rs  pieces2.rs  simpleloop.rs  validate.rs  version.rs  xboard.rs
src/board/: evaluate.rs  io.rs  makemove.rs  mod.rs  movegen.rs  perft.rs  search.rs  uci.rs
